--- a/.gitignore
+++ b/.gitignore
@@ -62,4 +62,6 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-
+# Unity versioning files; unnecessary to track
+Library/assetDatabase3
+Library/shadercompiler-UnityShaderCompiler0.log
